--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/1-128x128.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>HCH</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -22,7 +22,10 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+   <style type="text/css"> 
+	*{font-family: Microsoft JhengHei !important;
+	}
+	</style>   
 </head>
 <body>
   <section class="menu cid-rnX3RreX4x" once="menu" id="menu1-a">
